Caching in exam-service. Centralized jwt issuance in user-service and its local verification in exam-service. New endpoint getUsersByIds for issuing users in batches. Minor refactoring